src/components/header.module.scss
.header {
  position: relative;
  background-color: white;
  z-index: 5;
  &__content {
    display: grid;
    grid-template-columns: 1fr 1fr;
    grid-column-gap: $base-size;
    align-items: center;
    justify-content: space-between;
    &__logo > a {
      position: relative;
      display: block;
      width: rem(121px);
      height: rem(50px);
    }
    &__menu {
      display: none;
      cursor: pointer;
    }
    &__links {
      display: grid;
      justify-items: end;
      &__pages {
        display: grid;
        width: max-content;
        grid-auto-flow: column;
        justify-self: end;
        grid-column-gap: rem(42.72px);
        justify-items: end;
        align-items: center;
        a {
          padding: 11px 8px;
          width: min-content;
          line-height: 1.5rem;
          text-align: center;
        }
      }
    }
  }
  @include respond-to(">=xl") {
    &__content {
      // max-width: rem(960px);
      margin: auto;
      &__logo > img {
        width: rem(121px);
      }
    }
  }
  @include respond-to(">=xxl") {
    --f-gutter: 0;
    &__content {
      padding: 16px 0;
      max-width: rem(1200px);
    }
  }
  @include respond-to("xxxl") {
    &__content {
      max-width: rem(1200px);
      margin: auto;
    }
  }
  @include respond-to("<=l") {
    &__content {
      align-items: center;
      height: rem(46px);
      &__logo {
        display: grid;
        align-items: center;
        a { display: grid }
        img{
          height: rem(38.4px);
        }
      }
      &__menu {
        display: grid;
        justify-self: end;
        background: none;
      }
      &__links { display: none }
      &__logo > a > img {
        width: rem(96px);
      }  
    }
  }
}

